unpackaged/main/default/objects/GT_Event_RL__c/GT_Event_RL__c.object-meta.xml
<CustomObject>
    <description>This will be the Event (Related List to GES Connect Event) object for all Accounts under Generic Template</description>
    <label>Event</label>
    <nameField>
        <displayFormat>EV-{0000}</displayFormat>
        <label>Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>