unpackaged/main/default/objects/GT_Event_RL__c/fields/AM_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Email__c</fullName>
    <label>GES AM Email</label>
    <type>Email</type>
</CustomField>