unpackaged/main/default/objects/GT_Event_RL__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <inlineHelpText>Required when &#39;Canceled&#39; is checked</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>