unpackaged/main/default/objects/GT_Event_RL__c/fields/Day_1_Close_date_time__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Close_date_time__c</fullName>
    <label>Day 1 - Close date &amp; time</label>
    <type>DateTime</type>
</CustomField>