unpackaged/main/default/objects/GT_Event_RL__c/fields/Day_1_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Close_Time__c</fullName>
    <label>Day 1 Close Time</label>
    <type>Time</type>
</CustomField>