unpackaged/main/default/objects/GT_Event_RL__c/fields/Day_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Date__c</fullName>
    <label>Day 1 Date</label>
    <type>Date</type>
</CustomField>