unpackaged/main/default/objects/GT_Event_RL__c/fields/Day_4_Open_date_time__c.field-meta.xml
<CustomField>
    <fullName>Day_4_Open_date_time__c</fullName>
    <label>Day 4 - Open date &amp; time</label>
    <type>DateTime</type>
</CustomField>