unpackaged/main/default/objects/GT_Event_RL__c/fields/Event_Description_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Event_Description_CrownCastle__c</fullName>
    <label>Event Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>