unpackaged/main/default/objects/GT_Event_RL__c/fields/Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager__c</fullName>
    <label>Event Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aisling Meehan</fullName>
            </value>
            <value>
                <fullName>Caitlin Ferdyn</fullName>
            </value>
            <value>
                <fullName>Don Schmid</fullName>
            </value>
            <value>
                <fullName>Laine Mann</fullName>
            </value>
            <value>
                <fullName>Lee Kim</fullName>
            </value>
            <value>
                <fullName>Michael Clearey</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Sandra Kusek</fullName>
            </value>
            <value>
                <fullName>Shawn McDonald</fullName>
            </value>
            <value>
                <fullName>Suthee Suvansri</fullName>
            </value>
            <value>
                <fullName>Virginia Hayward</fullName>
            </value>
            <value>
                <fullName>Nicole Brown</fullName>
            </value>
            <value>
                <fullName>Lisa Mahan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>