unpackaged/main/default/objects/GT_Event_RL__c/fields/Event_Room_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Room_Date_Time__c</fullName>
    <label>Event Room Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>