unpackaged/main/default/objects/GT_Event_RL__c/fields/Event_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Room_Name__c</fullName>
    <label>Event Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>