unpackaged/main/default/objects/GT_Event_RL__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alita Mathews</fullName>
            </value>
            <value>
                <fullName>Allyson Wagner</fullName>
            </value>
            <value>
                <fullName>Amanda Shulman</fullName>
            </value>
            <value>
                <fullName>Amy Ziccarelli</fullName>
            </value>
            <value>
                <fullName>Beyer, Lisa</fullName>
            </value>
            <value>
                <fullName>Brosmore, Jamie</fullName>
            </value>
            <value>
                <fullName>Buzzatto, Stephanie</fullName>
            </value>
            <value>
                <fullName>Dabra Watters</fullName>
            </value>
            <value>
                <fullName>Daphne Saavedra</fullName>
            </value>
            <value>
                <fullName>Debbie Sullivan</fullName>
            </value>
            <value>
                <fullName>Epperson, Jill</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 1</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 2</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 3</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 4</fullName>
            </value>
            <value>
                <fullName>Jessica Bodner</fullName>
            </value>
            <value>
                <fullName>Jill Eppelman</fullName>
            </value>
            <value>
                <fullName>Jill Johnson</fullName>
            </value>
            <value>
                <fullName>Kayla Rogers</fullName>
            </value>
            <value>
                <fullName>Kevin Jones</fullName>
            </value>
            <value>
                <fullName>Kimrlee Shamey-Golonka</fullName>
            </value>
            <value>
                <fullName>Lauren Gallagher</fullName>
            </value>
            <value>
                <fullName>Lauren Poole</fullName>
            </value>
            <value>
                <fullName>Linda Holland</fullName>
            </value>
            <value>
                <fullName>Lisa Beyer</fullName>
            </value>
            <value>
                <fullName>Mary Jones</fullName>
            </value>
            <value>
                <fullName>Mary O&#39;Connell</fullName>
            </value>
            <value>
                <fullName>Mathews , Alita</fullName>
            </value>
            <value>
                <fullName>Megan Sien</fullName>
            </value>
            <value>
                <fullName>Melinda Peterson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>