unpackaged/main/default/objects/GT_Event_RL__c/fields/GES_AE_Phone_Auto__c.field-meta.xml
<CustomField>
    <fullName>GES_AE_Phone_Auto__c</fullName>
    <formula>IF((TEXT(GES_Account_Executive__c) == &quot;John Boy&quot;),&quot;412-208-2275&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Jennifer Spencer&quot;),&quot;(508) 408-2159&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Debbie Boncek&quot;),&quot;412-208-2264&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Lori Chester&quot;),&quot;(919) 491-0737&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Steve Maurer&quot;),&quot;(859) 283-8738&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Heather Rosenow&quot;),&quot;(847) 420-4132&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;GES Account Executive 1&quot;),&quot;(###) ###-####&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;GES Account Executive 2&quot;),&quot;(###) ###-####&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;GES Account Executive 3&quot;),&quot;(###) ###-####&quot;,
&quot;&quot;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GES AE Phone</label>
    <type>Text</type>
</CustomField>