unpackaged/main/default/objects/GT_Event_RL__c/fields/Hosting_Organization_Contact_Name_CrownC__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Organization_Contact_Name_CrownC__c</fullName>
    <label>Hosting Organization Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>