unpackaged/main/default/objects/GT_Event_RL__c/fields/Hosting_Organization_Name_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Organization_Name_CrownCastle__c</fullName>
    <label>Hosting Organization Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>