unpackaged/main/default/objects/GT_Event_RL__c/fields/I_D_Supervisor_Phone_Auto__c.field-meta.xml
<CustomField>
    <fullName>I_D_Supervisor_Phone_Auto__c</fullName>
    <formula>IF((TEXT(I_D_Supervisor__c) == &quot;Gary Vanderpol&quot;),&quot;219-613-6406&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Kari Storm&quot;),&quot;562-577-7674&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Scott Mattson&quot;),&quot;347-219-8592&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Don Hadrava&quot;),&quot;708-205-1380&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Dennis Skarupa&quot;),&quot;773-469-2632&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Steve Burgess&quot;),&quot;(714) 713-4110&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;I&amp;D Supervisor 1&quot;),&quot;(###)-###-####&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;I&amp;D Supervisor 2&quot;),&quot;(###)-###-####&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;I&amp;D Supervisor 3&quot;),&quot;(###)-###-####&quot;,
&quot;&quot;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I &amp; D Supervisor Phone</label>
    <type>Text</type>
</CustomField>