unpackaged/main/default/objects/GT_Event_RL__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Firearms</fullName>
            </value>
            <value>
                <fullName>Ammunition</fullName>
            </value>
            <value>
                <fullName>Electro-Optics</fullName>
            </value>
            <value>
                <fullName>Suppressors</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>