unpackaged/main/default/objects/GT_Event_RL__c/fields/Project_Manager_Email_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Email_CrownCastle__c</fullName>
    <label>CC Project Manager Email</label>
    <type>Email</type>
</CustomField>