unpackaged/main/default/objects/GT_Event_RL__c/recordTypes/Event_RL_CC.recordType-meta.xml
<RecordType>
    <fullName>Event_RL_CC</fullName>
    <active>true</active>
    <description>Event RL for CC</description>
    <label>Event RL CC</label>
</RecordType>