unpackaged/main/default/objects/GT_Event_RL__c/recordTypes/Event_RL_GT.recordType-meta.xml
<RecordType>
    <fullName>Event_RL_GT</fullName>
    <active>true</active>
    <description>Event RL for GT</description>
    <label>Event RL GT</label>
</RecordType>