unpackaged/main/default/objects/GT_Event_RL__c/recordTypes/EVent_RL_Merck.recordType-meta.xml
<RecordType>
    <fullName>EVent_RL_Merck</fullName>
    <active>true</active>
    <label>EVent RL Merck</label>
</RecordType>