unpackaged/main/default/objects/GT_Event_RL__c/recordTypes/Event_RL_NNI.recordType-meta.xml
<RecordType>
    <fullName>Event_RL_NNI</fullName>
    <active>true</active>
    <description>Event RL for NNI</description>
    <label>Event RL NNI</label>
</RecordType>