unpackaged/main/default/objects/GT_Event_RL__c/recordTypes/Event_RL_Pharma.recordType-meta.xml
<RecordType>
    <fullName>Event_RL_Pharma</fullName>
    <active>true</active>
    <label>Event RL Pharma</label>
</RecordType>