unpackaged/main/default/objects/GT_Event_RL__c/recordTypes/Event_Sig_Sauer.recordType-meta.xml
<RecordType>
    <fullName>Event_Sig_Sauer</fullName>
    <active>true</active>
    <label>Event Sig Sauer</label>
</RecordType>