unpackaged/main/default/objects/GT_Event_RL__c/validationRules/Name_required_for_Supervisor_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_required_for_Supervisor_Other</fullName>
    <active>true</active>
    <description>Name is required when &#39;Other&#39; option is selected for I&amp;D Supervisor</description>
    <errorConditionFormula>IF( 
AND( 
ISPICKVAL(I_D_Supervisor__c , &#39;Other&#39;), 
ISBLANK(I_D_Name_Other__c) 
),true,false)</errorConditionFormula>
    <errorDisplayField>I_D_Name_Other__c</errorDisplayField>
    <errorMessage>I&amp;D Name (Other) is required</errorMessage>
</ValidationRule>